# tracethreat-nrml

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  configure_ac_cmd-update-00-04012017.sh  configure_ac_cmd.sh  formatt_code.sh  git.commit.message.txt  libtool  tracethreat-nrml.sln
Debug/: test_core.exp  test_core.lib
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
db/: 000004.sst  000007.sst  000010.sst  IDENTITY  LOG  LOG.old.1007046270  LOG.old.1511957728  LOG.old.1638084267  LOG.old.1765704834  LOG.old.1928557397  LOG.old.2016204834  LOG.old.2153366759  LOG.old.2256713845  LOG.old.2431496077  LOG.old.26675095936  LOG.old.26733947283  LOG.old.26761224850  LOG.old.26763855229  LOG.old.26805609003  LOG.old.26822671989  LOG.old.27605512616  LOG.old.27734848020  LOG.old.27750551066  LOG.old.27751864744  LOG.old.27793128496  LOG.old.27805904338  LOG.old.27831396965  LOG.old.27882008901  LOG.old.28381452543  LOG.old.28524913764  LOG.old.28842097641  LOG.old.29648632389  LOG.old.29661633213  LOG.old.30146429132  LOG.old.30154157856  LOG.old.30911669016  LOG.old.31030695048  LOG.old.3128196164  LOG.old.3423984187  LOG.old.3448842430  (+62 more)
src/: license_source.txt
src/common/: RocksDBActivator.cpp
src/connector/: Makefile  Makefile.am  Makefile.in  RocksDBConnector.cpp  RocksDBConnector.hpp  TestRocksDBConnector.cpp
src/controller/: CredentialAccess.cpp  CredentialAccess.hpp
src/envi/: EnvironmentTest.hpp  TestCore.cpp  environment_test.hpp
src/mr/: README.md
src/msg/: Makefile  Makefile.am  Makefile.in  authenication.thrift  gen_script.sh  ttmat_internal.thrift
src/msg/.deps/: Authentication.Plo  authenication_constants.Plo  authenication_types.Plo
src/msg/.libs/: libauthen_thrift.so.0  libauthen_thrift.so.0.0.0
src/msg/gen-cpp/: Authentication.cpp  Authentication.h  Authentication_server.skeleton.cpp  TTMATSystemService.cpp  TTMATSystemService.h  TTMATSystemService_server.skeleton.cpp  authenication_constants.cpp  authenication_constants.h  authenication_types.cpp  authenication_types.h  ttmat_internal_constants.cpp  ttmat_internal_constants.h  ttmat_internal_types.cpp  ttmat_internal_types.h
src/msg/gen-js/: Authentication.js  TTMATSystemService.js  authenication_types.js  ttmat_internal_types.js
src/nc/arch/: CMakeLists.txt
src/nc/arch/arm/: ArmArchitecture.cpp  ArmArchitecture.h  ArmDisassembler.h  ArmInstruction.h  ArmInstructionAnalyzer.cpp  ArmInstructionAnalyzer.h  ArmRegisters.h  CMakeLists.txt  CallingConventions.cpp  CallingConventions.h
src/nc/arch/x86/: X86Disassembler.cpp
src/nc/common/: BitTwiddling.h  Branding.cpp  Branding.h  ByteOrder.h  CMakeLists.txt  CancellationToken.cpp  CancellationToken.h  CheckedCast.h  Escaping.cpp  Escaping.h  Exception.cpp  Exception.h  Foreach.h  LogToken.h  PrintCallback.h  Printable.h  Range.h  SignalLogger.cpp  SizedValue.h  StreamLogger.h  StringToInt.cpp  StringToInt.h  Subclass.h  Types.h  Unreachable.h  Unused.h  ilist.h  make_unique.h
src/nc/core/: CMakeLists.txt  Context.cpp  Context.h  Driver.cpp  Driver.h  ELFDriver.hpp  MasterAnalyzer.h
src/nc/core/arch/: Architecture.cpp  Architecture.h  ArchitectureRepository.cpp  ArchitectureRepository.h  Capstone.h  CapstoneInstruction.h  Disassembler.h  Instruction.h  Instructions.cpp  Instructions.h  Register.h  Registers.h
src/nc/core/image/: ByteSource.h  Image.cpp  Image.h  Platform.cpp  Platform.h  Reader.cpp  Reader.h  Relocation.h  Section.cpp  Section.h  Symbol.cpp  Symbol.h
src/nc/core/input/: ParseError.cpp  ParseError.h  Parser.cpp  Parser.h  ParserRepository.cpp  ParserRepository.h  Utils.h  Utils.h_bp_0502017
src/nc/core/ir/: BasicBlock.h  Function.h  Functions.h  Jump.h  JumpTarget.h  MemoryDomain.h  MemoryLocation.cpp  MemoryLocation.h  Statement.h  Statements.cpp  Statements.h  Term.h  Terms.cpp  Terms.h
src/nc/core/ir/calling/: CallSignature.h  CalleeId.h  Convention.cpp  Convention.h  Conventions.h  FunctionSignature.h  Hooks.h  Signatures.h
src/nc/core/ir/cflow/: BasicNode.h  Dfs.h  Graph.h  Graphs.h  Node.h  Region.h  StructureAnalyzer.h
src/nc/core/ir/dflow/: AbstractValue.h  Dataflow.h  DataflowAnalyzer.cpp  DataflowAnalyzer.h  Dataflows.h  ReachingDefinitions.h
src/nc/core/ir/liveness/: Liveness.h  LivenessAnalyzer.h  Livenesses.h
src/nc/core/ir/vars/: Variable.h  Variables.h
src/nc/core/irgen/: Expressions.h  InstructionAnalyzer.h
src/nc/core/likec/: ArgumentDeclaration.h  BinaryOperator.h  Block.h  Break.h  CallOperator.h  Commentable.h  While.h
src/nc/core/mangling/: DefaultDemangler.cpp  DefaultDemangler.h  Demangler.h
src/nc/input/: CMakeLists.txt
src/nc/input/elf/: CMakeLists.txt  ElfParser.cpp  ElfParser.h  elf_common.h
src/nc/test/: CMakeLists.txt  DriverELFTest.cpp  ReadELFTest.hpp
src/services/: AuthenticationHandler.cpp  AuthenticationHandler.hpp  AuthenticationSimpleServiceTest.cpp  MailHandler.hpp  Makefile  Makefile.am  Makefile.in  TTMATServiceHandler.cpp  TTMATServiceHandler.hpp  TTMATSystemServiceTest.cpp  test_services  test_services.cpp
src/services/.deps/: AuthenticationHandler.Plo  test_services-AuthenticationHandler.Po  test_services-test_services.Po
src/services/.libs/: libservices.so.0  libservices.so.0.0.0  lt-test_services  test_services
src/utils/: CMakeLists.txt  Flags.cpp  Flags.hpp  Makefile  Makefile.am  Makefile.in  TestUtils.cpp  flags.hpp
src/utils/.deps/: flags.Plo  test_utils-flags.Po  test_utils-test_utils.Po
src/utils/.libs/: libutils.so.0.0.0
test_core/: ReadMe.txt  stdafx.cpp  test_core.vcxproj  test_core.vcxproj.filters  test_fs.cpp
test_core/Debug/: vc120.idb
test_core/Debug/test_core.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_core.lastbuildstate  test_core.write.1u.tlog
tracethreat-nrml/: RREADME.md  stdafx.cpp  tracethreat-nrml.cpp  tracethreat-nrml.vcxproj  tracethreat-nrml.vcxproj.filters
tracethreat-nrml/Debug/: vc120.idb
(+6 files in other folders)
